--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Node.js dependencies
 node_modules/
+frontend/node_modules/
+backend/node_modules/
 npm-debug.log
 yarn-error.log
 yarn.lock
@@ -8,7 +10,8 @@ package-lock.json
 # Build output
 dist/
 build/
-public/build/
+frontend/build/
+frontend/public/build/
 
 # Environment variables
 .env
@@ -16,6 +19,8 @@ public/build/
 .env.development
 .env.test
 .env.production
+frontend/.env*
+backend/.env*
 
 # Sensitive configuration files
 config/database.yml
@@ -46,14 +51,6 @@ Thumbs.db
 # Testing
 coverage/
 *.lcov
-
-# Build artifacts for React
-/public/static/js/*
-/public/static/css/*
-/public/static/media/*
-!/public/static/js/*.js
-!/public/static/css/*.css
-!/public/static/media/*.*
 
 # Database dumps
 *.sql
