--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Node.js dependencies
 node_modules/
 frontend/node_modules/
-backend/node_modules/
+Backend/node_modules/
 npm-debug.log
 yarn-error.log
 yarn.lock
