--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
+    "backend": "file:",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "pg": "^8.16.0"
